LLVM soft-linking should be truly fail-silent https://bugs.webkit.org/show_bug.cgi?id=133482

Reviewed by Mark Lam.

* llvm/InitializeLLVMPOSIX.cpp:
(JSC::initializeLLVMPOSIX): Missing return statement in the dlsym() returning null case.



Canonical link: https://commits.webkit.org/151501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169561 268f45cc-cd09-0410-ab3c-d52691b4dbfc